# my-ai-agent

./: .env.example  .gitignore  ARCHITECTURE.md  EXECUTION_DASHBOARD.md  FINAL_AUDIT.md  LICENSE  PRD.md  PROJECT_MATURITY_REPORT.md  README.md  RISK_REGISTER.md  ROADMAP.md  SRS.md  agent.py  branch_test.md  main.py  pyproject.toml  repository_audit.md  requirements.txt  test.md  verification-0328967.txt  verification-NUslvzYOwIpUJtXYDpX03sc4cvKTDd7P.txt
.github/: CODEOWNERS
architecture/: README.md
capability-test/: timestamp.txt
docs/: architecture.md
governance/: README.md
grok-proof/: proof.json  proof.md
product/: README.md
reports/: README.md
reviews/: README.md
roadmaps/: README.md
security/: README.md
specifications/: README.md
src/: __init__.py
src/agent/: core.py
src/core/: __init__.py  agent.py  config.py  exceptions.py  logger.py  memory.py  state.py
src/tools/: __init__.py  calculator.py  utilities.py  web_search.py
src/utils/: llm.py
testing/: README.md
tests/: __init__.py  test_agent.py  test_config.py  test_memory.py  test_utilities.py
